--- a/STM32H503CBT6.ioc
+++ b/STM32H503CBT6.ioc
@@ -174,7 +174,7 @@ RCC.CRSFreq_Value=48000000
 RCC.CSI_VALUE=4000000
 RCC.CortexFreq_Value=24000000
 RCC.DACFreq_Value=32768
-RCC.EPOD_VALUE=4000000
+RCC.EPOD_VALUE=24000000
 RCC.FCLKCortexFreq_Value=24000000
 RCC.FDCANFreq_Value=24000000
 RCC.FamilyName=M
@@ -186,7 +186,7 @@ RCC.I2C1Freq_Value=24000000
 RCC.I2C2Freq_Value=24000000
 RCC.I3C1Freq_Value=24000000
 RCC.I3C2Freq_Value=24000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I3C1Freq_Value,I3C2Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIRC_VALUE,MCO1PinFreq_Value,PLL2FRACN,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL2Source,PLLFRACN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I3C1Freq_Value,I3C2Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIRC_VALUE,MCO1PinFreq_Value,PLL1P,PLL1Q,PLL2FRACN,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLLFRACN,PLLM,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value
 RCC.LPTIM1Freq_Value=24000000
 RCC.LPTIM2Freq_Value=24000000
 RCC.LPUART1Freq_Value=24000000
@@ -194,34 +194,37 @@ RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSIRC_VALUE=32000
 RCC.MCO1PinFreq_Value=32000000
+RCC.PLL1P=16
+RCC.PLL1Q=5
 RCC.PLL2FRACN=0
-RCC.PLL2PoutputFreq_Value=1548000000
-RCC.PLL2QoutputFreq_Value=1548000000
-RCC.PLL2RoutputFreq_Value=1548000000
-RCC.PLL2Source=RCC_PLL2_SOURCE_HSE
+RCC.PLL2PoutputFreq_Value=258000000
+RCC.PLL2QoutputFreq_Value=258000000
+RCC.PLL2RoutputFreq_Value=258000000
 RCC.PLLFRACN=0
-RCC.PLLPoutputFreq_Value=258000000
-RCC.PLLQoutputFreq_Value=258000000
+RCC.PLLM=8
+RCC.PLLPoutputFreq_Value=24187500
+RCC.PLLQoutputFreq_Value=77400000
+RCC.PLLSourceVirtual=RCC_PLL1_SOURCE_HSE
 RCC.PWRFreq_Value=24000000
 RCC.RNGFreq_Value=48000000
-RCC.SPI1Freq_Value=258000000
-RCC.SPI2Freq_Value=258000000
-RCC.SPI3Freq_Value=258000000
+RCC.SPI1Freq_Value=77400000
+RCC.SPI2Freq_Value=77400000
+RCC.SPI3Freq_Value=77400000
 RCC.SYSCLKFreq_VALUE=24000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSE
 RCC.USART1Freq_Value=24000000
 RCC.USART2Freq_Value=24000000
 RCC.USART3Freq_Value=24000000
 RCC.USBFreq_Value=48000000
-RCC.VCOInput2Freq_Value=24000000
-RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=516000000
-RCC.VCOPLL2OutputFreq_Value=3096000000
+RCC.VCOInput2Freq_Value=4000000
+RCC.VCOInputFreq_Value=3000000
+RCC.VCOOutputFreq_Value=387000000
+RCC.VCOPLL2OutputFreq_Value=516000000
 SBS.IPParameters=VDDIO1,VDDIO22
 SBS.VDDIO1=Enable
 SBS.VDDIO22=Enable
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
-SPI1.CalculateBaudRate=8.0625 MBits/s
+SPI1.CalculateBaudRate=2.41875 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
